call issue vc api of studio

--- a/.env.staging
+++ b/.env.staging
@@ -12,8 +12,4 @@ JWT_SECRET=my\$ecreEtKeY@123
 NODE_SERVER_BASE_URL=http://localhost:5000/
 NODE_SERVER_DID_CREATE_EP=api/did/create_tmp
 NODE_SERVER_SCHEMA_CREATE_EP=api/schema/create
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=65
-MAIL_USERNAME=example@gmail.com
-MAIL_PASSWORD=examplePassw00rd1@
-MAIL_NAME=Hypersign Admin
+STUDIO_SERVER_VC_EP=http://localhost:9000/api/credential/issue_tmp
