--- a/.env.staging
+++ b/.env.staging
@@ -12,4 +12,10 @@ JWT_SECRET=my\$ecreEtKeY@123
 NODE_SERVER_BASE_URL=http://localhost:5000/
 NODE_SERVER_DID_CREATE_EP=api/did/create_tmp
 NODE_SERVER_SCHEMA_CREATE_EP=api/schema/create
-STUDIO_SERVER_VC_EP=http://localhost:9000/api/credential/issue_tmp
+MAIL_HOST="XXXXX"
+MAIL_PORT=465 
+MAIL_USERNAME="XXXXX"
+MAIL_PASSWORD="XXXXX"
+MAIL_NAME="Hypersign Admin"
+SCHEMA_NAME="Hypersign"
+SCEHMA_DESCRIPTION="Hypersign Authentication Credential"
