fixed url problem

--- a/.env.staging
+++ b/.env.staging
@@ -1,7 +1,6 @@
 NODE_ENV=development
 PORT=8000
-HOST=localhost
-LOG_FILEPATH=../log/studio-server.log
+HOSTNAMEURL='http://localhost:8000'
 LOG_DIR=./log
 LOG_TIMESTAMP_FORMAT=YYYY-MM-DD HH:mm:ss.SSS
 LOG_LEVEL=debug
