Updated the deeplink landing page

--- a/.env.staging
+++ b/.env.staging
@@ -1,6 +1,6 @@
+HOSTNAMEURL="http://192.168.43.107:8000"
 NODE_ENV=development
 PORT=8000
-HOSTNAMEURL='http://localhost:8000'
 LOG_DIR=./log
 LOG_TIMESTAMP_FORMAT=YYYY-MM-DD HH:mm:ss.SSS
 LOG_LEVEL=debug
@@ -8,13 +8,13 @@ DATABASE_FILEPATH=../db/studio-server.db
 DID_METHOD_NAME=hs
 DID_PREFIX=did
 JWT_SECRET=my\$ecreEtKeY@123
-NODE_SERVER_BASE_URL=http://localhost:5000/
+NODE_SERVER_BASE_URL="https://ssi.hypermine.in/core/"
 NODE_SERVER_DID_CREATE_EP=api/did/create_tmp
 NODE_SERVER_SCHEMA_CREATE_EP=api/schema/create
-MAIL_HOST="XXXXX"
+MAIL_HOST="hypermine.in"
 MAIL_PORT=465 
-MAIL_USERNAME="XXXXX"
-MAIL_PASSWORD="XXXXX"
+MAIL_USERNAME="connect@hypermine.in"
+MAIL_PASSWORD="Hypermine.123"
 MAIL_NAME="Hypersign Admin"
 SCHEMA_NAME="Hypersign"
 SCEHMA_DESCRIPTION="Hypersign Authentication Credential"
