--- a/package.json
+++ b/package.json
@@ -1,46 +1,47 @@
 {
-    "name": "superhero-auth-server",
+    "name": "hypersign-auth-server",
     "version": "1.0.0",
-    "description": "Server for hypersign studio web portal",
-    "main": "dist/index",
-    "typings": "dist/index",
+    "description": "Used to verify userdata (email, for now) and issue a cryptographically signed document, called Hypersign Auth Credential, to the end-user.",
+    "main": "app.js",
     "scripts": {
-        "setup": "npm run setEnv && npm run build && npm run newdb && npm run bootstrap",
-        "newdb": "npm run start -- --newdb",
-        "setup-noenv": "npm run build && npm run start -- --newdb && npm run setUI",
-        "setEnv": "if [ -e .env.staging ]; then cp .env.staging .env; fi",
-        "setUI": "mkdir -p public && mkdir -p dist/public && cp -R ../client/dist/* public && cp -R public/* dist/public",
-        "start": "node dist/index.js",
-        "dev": "nodemon src/index.ts",
-        "build": "tsc -p .",
-        "bootstrap": "npm run start -- --bootstrap",
-        "test": "mocha -r ts-node/register src/tests/**/*.test.ts"
+        "start": "NODE_ENV=production node dist/app.js",
+        "prod": "NODE_ENV=production node dist/api.bundle.js",
+        "dev": "NODE_ENV=development nodemon src/app.ts",
+        "build:dev": "rimraf dist && tsc -p .",
+        "build:prod": "rimraf dist && webpack",
+        "lint": "eslint . --ext .ts",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Vishwas Anand Bhushan",
     "license": "MIT",
     "dependencies": {
-        "aes-js": "^3.1.2",
-        "command-line-args": "^5.1.1",
-        "command-line-usage": "^6.1.0",
-        "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "jsonwebtoken": "^8.5.1",
-        "lds-sdk": "^4.0.1",
-        "node-fetch": "^2.6.1",
-        "nodemailer": "^6.4.11",
-        "qrcode": "^1.4.4",
-        "sha.js": "^2.4.11",
-        "simple-node-logger": "^18.12.24",
-        "sqlite3": "^5.0.0",
-        "uuid": "^8.2.0"
+        "express-rate-limit": "^5.2.6",
+        "helmet": "^4.4.1",
+        "hypersign-auth-js-sdk": "^2.0.2",
+        "mongoose": "^5.12.3",
+        "swagger-ui-express": "^4.1.6",
+        "uuid": "^8.3.2",
+        "winston": "^3.3.3",
+        "xss-clean": "^0.1.1"
     },
     "devDependencies": {
-        "@types/express": "^4.17.6",
-        "@types/node": "^14.0.23",
-        "nodemon": "^2.0.4",
-        "ts-node": "^8.10.2",
-        "typescript": "^3.4.0"
+        "@types/body-parser": "^1.17.0",
+        "@types/cors": "^2.8.5",
+        "@types/method-override": "0.0.31",
+        "@types/morgan": "^1.7.35",
+        "@types/node": "^12.6.1",
+        "@typescript-eslint/eslint-plugin": "^4.18.0",
+        "@typescript-eslint/parser": "^4.18.0",
+        "eslint": "^7.22.0",
+        "nodemon": "^1.19.1",
+        "rimraf": "^2.6.3",
+        "ts-loader": "^8.0.18",
+        "ts-node": "^9.1.1",
+        "typescript": "^4.2.3",
+        "webpack": "^5.27.1",
+        "webpack-cli": "^4.5.0"
     }
 }
