--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "hypersign-auth-server",
     "version": "1.0.0",
-    "description": "Used to verify userdata (email, for now) and issue a cryptographically signed document, called Hypersign Auth Credential, to the end-user.",
+    "description": "Server to issue Hypersign Auth Credential. It uses hypersign-auth-js-sdk for this purpose ",
     "main": "app.js",
     "scripts": {
         "start": "NODE_ENV=production node dist/app.js",
