--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
         "express-rate-limit": "^5.2.6",
         "express-validator": "^6.12.2",
         "helmet": "^4.4.1",
+        "hid-hd-wallet": "git+https://github.com/hypersign-protocol/hid-hd-wallet.git#ssi-integration",
         "hs-ssi-sdk": "^5.0.1",
-        "hypersign-auth-js-sdk": "^2.0.4",
+        "hypersign-auth-node-sdk": "git+https://github.com/hypersign-protocol/hypersign-auth-node-sdk.git#ssi-integration",
         "mongoose": "^5.12.3",
         "swagger-ui-express": "^4.1.6",
         "uuid": "^8.3.2",
