updated package json to not use git protocol for npm

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
         "express-rate-limit": "^5.2.6",
         "express-validator": "^6.12.2",
         "helmet": "^4.4.1",
-        "hid-hd-wallet": "git+https://github.com/hypersign-protocol/hid-hd-wallet.git#ssi-integration",
-        "hs-ssi-sdk": "git+https://github.com/hypersign-protocol/hid-ssi-js-sdk.git#ssi-integration",
-        "hypersign-auth-node-sdk": "git+https://github.com/hypersign-protocol/hypersign-auth-node-sdk.git#ssi-integration",
+        "hid-hd-wallet": "https://github.com/hypersign-protocol/hid-hd-wallet#ssi-integration",
+        "hs-ssi-sdk": "https://github.com/hypersign-protocol/hid-ssi-js-sdk#ssi-integration",
+        "hypersign-auth-node-sdk": "https://github.com/hypersign-protocol/hypersign-auth-node-sdk#ssi-integration",
         "mongoose": "^5.12.3",
         "swagger-ui-express": "^4.1.6",
         "uuid": "^8.3.2",
