--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
         "express-validator": "^6.12.2",
         "helmet": "^4.4.1",
         "hid-hd-wallet": "https://github.com/hypersign-protocol/hid-hd-wallet#ssi-integration",
-        "hs-ssi-sdk": "https://github.com/hypersign-protocol/hid-ssi-js-sdk#ssi-integration",
-        "hypersign-auth-node-sdk": "https://github.com/hypersign-protocol/hypersign-auth-node-sdk#ssi-integration",
+        "hs-ssi-sdk": "^6.0.1",
+        "hypersign-auth-node-sdk": "^5.0.1",
         "mongoose": "^5.12.3",
         "swagger-ui-express": "^4.1.6",
         "uuid": "^8.3.2",
