--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "author": "Vishwas Anand Bhushan",
     "license": "MIT",
     "dependencies": {
+        "bullmq": "^3.1.3",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-rate-limit": "^5.2.6",
         "express-validator": "^6.12.2",
         "helmet": "^4.4.1",
-        "hs-ssi-sdk": "^6.2.0",
-        "hypersign-auth-node-sdk": "^6.1.0",
         "hid-hd-wallet": "https://github.com/hypersign-protocol/hid-hd-wallet#ssi-integration",
+        "hs-ssi-sdk": "https://github.com/hypersign-protocol/hid-ssi-js-sdk#credential-register-optional",
+        "hypersign-auth-node-sdk": "github:hypersign-protocol/hypersign-auth-node-sdk#registration-on-registry-optional",
         "mongoose": "^5.12.3",
         "swagger-ui-express": "^4.1.6",
         "uuid": "^8.3.2",
