--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "start": "NODE_ENV=production node dist/src/app.js",
         "prod": "NODE_ENV=production node dist/api.bundle.js",
         "dev": "NODE_ENV=production nodemon src/app.ts",
+        "service:dev": "NODE_ENV=production nodemon src/services/redisPubSub.ts",
+        "service:start":"NODE_ENV=production node dist/src/services/redisPubSub.js",
         "build": "rimraf dist && tsc -p . && cp -r public dist && cp production.env dist",
         "lint": "eslint . --ext .ts",
         "test": "echo \"Error: no test specified\" && exit 1",
@@ -24,8 +26,10 @@
         "helmet": "^4.4.1",
         "hid-hd-wallet": "https://github.com/hypersign-protocol/hid-hd-wallet#ssi-integration",
         "hs-ssi-sdk": "https://github.com/hypersign-protocol/hid-ssi-js-sdk#credential-register-optional",
-        "hypersign-auth-node-sdk": "github:hypersign-protocol/hypersign-auth-node-sdk#registration-on-registry-optional",
+        "hypersign-auth-node-sdk": "https://github.com/hypersign-protocol/hypersign-auth-node-sdk#registration-on-registry-optional",
+        "ioredis": "^5.2.4",
         "mongoose": "^5.12.3",
+        "node-cron": "^3.0.2",
         "swagger-ui-express": "^4.1.6",
         "uuid": "^8.3.2",
         "winston": "^3.3.3",
