--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "start": "NODE_ENV=production node dist/src/app.js",
         "prod": "NODE_ENV=production node dist/api.bundle.js",
         "dev": "NODE_ENV=production nodemon src/app.ts",
+        "test:edv": "NODE_ENV=production nodemon src/services/edvService.ts",
         "service:dev": "NODE_ENV=production nodemon src/services/processBatchTxn.ts",
         "service:start": "NODE_ENV=production node dist/src/services/processBatchTxn.js",
         "build": "rimraf dist && tsc -p . && cp -r public dist && cp production.env dist",
@@ -17,6 +18,9 @@
     "author": "Vishwas Anand Bhushan",
     "license": "MIT",
     "dependencies": {
+        "@cosmjs/crypto": "^0.29.5",
+        "@digitalbazaar/ed25519-verification-key-2020": "^3.3.0",
+        "@digitalbazaar/x25519-key-agreement-key-2020": "^2.1.0",
         "bullmq": "^3.1.3",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
@@ -27,6 +31,7 @@
         "hid-hd-wallet": "https://github.com/hypersign-protocol/hid-hd-wallet#ssi-integration",
         "hs-ssi-sdk": "https://github.com/hypersign-protocol/hid-ssi-js-sdk#credential-revocation",
         "hypersign-auth-node-sdk": "https://github.com/hypersign-protocol/hypersign-auth-node-sdk#registration-on-registry-optional",
+        "hypersign-edv-client": "git+https://github.com/hypersign-protocol/hypersign-edv-client.git#master",
         "ioredis": "^5.2.4",
         "mongoose": "^5.12.3",
         "node-cron": "^3.0.2",
