--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
         "start": "NODE_ENV=production node dist/src/app.js",
         "prod": "NODE_ENV=production node dist/api.bundle.js",
         "dev": "NODE_ENV=production nodemon src/app.ts",
-        "service:dev": "NODE_ENV=production nodemon src/services/processBatchTxn.ts",
+        "service:dev": "NODE_ENV=production ts-node src/services/processBatchTxn.ts",
         "service:start": "NODE_ENV=production node dist/src/services/processBatchTxn.js",
         "build": "rimraf dist && tsc -p . && cp -r public dist && cp production.env dist",
         "lint": "eslint . --ext .ts",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "bootstrap": "NODE_ENV=production ts-node src/bootstrapHypersignMaterial.ts"
+        "bootstrap:dev": "NODE_ENV=production ts-node src/bootstrapHypersignMaterial.ts",
+        "bootstrap": "NODE_ENV=production ts-node dist/src/bootstrapHypersignMaterial.js"
     },
     "author": "Vishwas Anand Bhushan",
     "license": "MIT",
@@ -30,7 +31,7 @@
         "hid-hd-wallet": "https://github.com/hypersign-protocol/hid-hd-wallet#ssi-integration",
         "hs-ssi-sdk": "https://github.com/hypersign-protocol/hid-ssi-js-sdk#credential-revocation",
         "hypersign-auth-node-sdk": "https://github.com/hypersign-protocol/hypersign-auth-node-sdk#registration-on-registry-optional",
-        "hypersign-edv-client": "git+https://github.com/hypersign-protocol/hypersign-edv-client.git#master",
+        "hypersign-edv-client": "https://github.com/hypersign-protocol/hypersign-edv-client.git#master",
         "ioredis": "^5.2.4",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^5.12.3",
