made auth server compatible with latest hid-authnode sdk and new edv server

--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
         "express-validator": "^6.12.2",
         "helmet": "^4.4.1",
         "hid-hd-wallet": "https://github.com/hypersign-protocol/hid-hd-wallet#ssi-integration",
-        "hs-ssi-sdk": "https://github.com/hypersign-protocol/hid-ssi-js-sdk#credential-revocation",
-        "hypersign-auth-node-sdk": "https://github.com/hypersign-protocol/hypersign-auth-node-sdk#registration-on-registry-optional",
-        "hypersign-edv-client": "git+https://github.com/hypersign-protocol/hypersign-edv-client.git#master",
+        "hs-ssi-sdk": "^7.0.1",
+        "hypersign-auth-node-sdk": "^6.4.2",
+        "hypersign-edv-client": "github:hypersign-protocol/hypersign-edv-client#develop",
         "ioredis": "^5.2.4",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^5.12.3",
