--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
         "express-rate-limit": "^5.2.6",
         "express-validator": "^6.12.2",
         "helmet": "^4.4.1",
-        "hid-hd-wallet": "https://github.com/hypersign-protocol/hid-hd-wallet#ssi-integration",
-        "hs-ssi-sdk": "/Users/hermit/code/hm/hs/hid-ssi-js-sdk",
-        "hypersign-auth-node-sdk": "file:../hypersign-auth-node-sdk",
+        "hid-hd-wallet": "github:hypersign-protocol/hid-hd-wallet#ssi-integration",
+        "hs-ssi-sdk": "github:hypersign-protocol/hid-ssi-js-sdk#testcase/bjj",
+        "hypersign-auth-node-sdk": "github:hypersign-protocol/hypersign-auth-node-sdk#update-prajna",
         "hypersign-edv-client": "github:hypersign-protocol/hypersign-edv-client#develop",
         "ioredis": "^5.2.4",
         "jsonwebtoken": "^9.0.0",
@@ -55,6 +55,6 @@
         "ts-node": "^10.8.0",
         "typescript": "^4.7.2",
         "webpack": "^5.27.1",
-        "webpack-cli": "^4.5.0"
+        "webpack-cli": "^5.1.4"
     }
 }
