--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -35,7 +35,9 @@ jobs:
           GOOGLE_PROJECT_ID: ${{secrets.GOOGLE_PROJECT_ID}}
           GOOGLE_ARTIFACT_URL: ${{secrets.GOOGLE_ARTIFACT_URL}}
           GOOGLE_ARTIFACT_REPO: ${{secrets.GOOGLE_ARTIFACT_REPO}}
-        run:
+          HYPERSIGN_JSON: ${{secrets.HYPERSIGN_JSON}}
+        run: echo -e '${{secrets.HYPERSIGN_JSON}}'' >> hypersign.json
+
           docker build -t $GOOGLE_ARTIFACT_URL/$GOOGLE_PROJECT_ID/$GOOGLE_ARTIFACT_REPO/auth-server:latest .
 
           docker push  $GOOGLE_ARTIFACT_URL/$GOOGLE_PROJECT_ID/$GOOGLE_ARTIFACT_REPO/auth-server:latest
