--- a/.deploy/deployment.yaml
+++ b/.deploy/deployment.yaml
@@ -55,15 +55,15 @@ spec:
             - name: LOG_LEVEL
               value: __LOG_LEVEL__
             - name: MAXIMUM_DELAY
-              value: __MAXIMUM_DELAY__
+              value: "__MAXIMUM_DELAY__"
             - name: MAX_BATCH_SIZE
               value: __MAX_BATCH_SIZE__
             - name: MINIMUM_DELAY
-              value: __MINIMUM_DELAY__
+              value: "__MINIMUM_DELAY__"
             - name : NODE_ENV
               value: __NODE_ENV__
             - name: PORT 
-              value: __PORT__
+              value: "__PORT__"
             - name: REDIS_HOST
               value: __REDIS_HOST__
             - name: REDIS_PORT
@@ -152,18 +152,18 @@ spec:
             - name: LOG_LEVEL
               value: __LOG_LEVEL__
             - name: MAXIMUM_DELAY
-              value: __MAXIMUM_DELAY__
+              value: "__MAXIMUM_DELAY__"
             - name: MAX_BATCH_SIZE
               value: __MAX_BATCH_SIZE__
             - name: MINIMUM_DELAY
-              value: __MINIMUM_DELAY__
+              value: "__MINIMUM_DELAY__"
             - name : NODE_ENV
               value: __NODE_ENV__
             - name: PORT 
-              value: __PORT__
+              value: "__PORT__"
             - name: REDIS_HOST
               value: __REDIS_HOST__
-            - name: REDIS_PORT
+            - name: "REDIS_PORT"
               value: "__REDIS_PORT__"
             - name: SERVICE_END_POINT
               value: __SERVICE_END_POINT__
