--- a/.deploy/deployment.yaml
+++ b/.deploy/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: auth-server
+  namespace: hypermine-development
 spec:
   selector:
     matchLabels:
@@ -72,9 +73,6 @@ spec:
               value: __SERVICE_END_POINT__
             - name: WHITELISTED_CORS
               value: '[ "https://dashboard.hypermine.in","wallet-stage.hypersign.id" , "https://whitelist.hypermine.in",  "https://wallet.hypermine.in", "https://ssi.hypermine.in", "http://localhost:4999", "https://hswallet-stage.netlify.app", "https://hyperfyre.netlify.app", "https://wallet-stage.hypersign.id/", "https://hswallet-stage.netlify.app","https://wallet-prajna.hypersign.id"]'
-
-
-
       volumes: 
         - name: auth-server-hypersign-json
           secret:
@@ -84,6 +82,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: auth-server-service
+  namespace: hypermine-development
+
 spec:
   type: NodePort
   selector:
@@ -96,18 +96,20 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: auth-server
+  name: auth-server-txn
+  namespace: hypermine-development
+
 spec:
   selector:
     matchLabels:
-      app: auth-server
+      app: auth-server-txn
   template:
     metadata:
       labels:
-        app: auth-server
+        app: auth-server-txn
     spec:
       containers:
-        - name: auth-server
+        - name: auth-server-txn
           image: __GOOGLE_ARTIFACT_URL__/__GOOGLE_PROJECT_ID__/__GOOGLE_ARTIFACT_REPO__/auth-server-txn:latest
           imagePullPolicy: Always
         
@@ -180,6 +182,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: auth-server-txn-service
+  namespace: hypermine-development
+
 spec:
   type: NodePort
   selector:
