--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -2,8 +2,9 @@ name: AuthServer Build and deploy Pipeline
 
 on:
   push:
-    branches:
-      - "master"
+    tags:
+      - "v[0-9]+.[0-9]+.[0-9]+"
+      - "v[0-9]+.[0-9]+.[0-9]-rc.[0-9]+"
 
 jobs:
   Build-Pipeline:
@@ -12,6 +13,8 @@ jobs:
     steps:
       - name: code checkout
         uses: actions/checkout@v3
+      - name: Set Latest Tag
+        run: echo "LATEST_RELEASE_TAG=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
 
       - id: "auth"
         uses: "google-github-actions/auth@v1"
@@ -39,13 +42,13 @@ jobs:
           GOOGLE_ARTIFACT_REPO: ${{secrets.GOOGLE_ARTIFACT_REPO}}
           HYPERSIGN_JSON: ${{secrets.HYPERSIGN_JSON}}
         run:
-          docker build -t $GOOGLE_ARTIFACT_URL/$GOOGLE_PROJECT_ID/$GOOGLE_ARTIFACT_REPO/auth-server:2 .
+          docker build -t $GOOGLE_ARTIFACT_URL/$GOOGLE_PROJECT_ID/$GOOGLE_ARTIFACT_REPO/auth-server:${{ env.LATEST_RELEASE_TAG }} .
 
-          docker push  $GOOGLE_ARTIFACT_URL/$GOOGLE_PROJECT_ID/$GOOGLE_ARTIFACT_REPO/auth-server:2
+          docker push  $GOOGLE_ARTIFACT_URL/$GOOGLE_PROJECT_ID/$GOOGLE_ARTIFACT_REPO/auth-server:${{ env.LATEST_RELEASE_TAG }}
 
-          docker build -t $GOOGLE_ARTIFACT_URL/$GOOGLE_PROJECT_ID/$GOOGLE_ARTIFACT_REPO/auth-server-txn:2  . -f Txn.Dockerfile
+          docker build -t $GOOGLE_ARTIFACT_URL/$GOOGLE_PROJECT_ID/$GOOGLE_ARTIFACT_REPO/auth-server-txn:${{ env.LATEST_RELEASE_TAG }}  . -f Txn.Dockerfile
 
-          docker push $GOOGLE_ARTIFACT_URL/$GOOGLE_PROJECT_ID/$GOOGLE_ARTIFACT_REPO/auth-server-txn:2
+          docker push $GOOGLE_ARTIFACT_URL/$GOOGLE_PROJECT_ID/$GOOGLE_ARTIFACT_REPO/auth-server-txn:${{ env.LATEST_RELEASE_TAG }}
 
   Deploy-Pipeline:
     needs: [Build-Pipeline]
@@ -54,6 +57,10 @@ jobs:
     steps:
       - name: code checkout
         uses: actions/checkout@v3
+
+      - name: Set Latest Tag
+        run: echo "LATEST_RELEASE_TAG=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
+
       - id: "auth"
         uses: "google-github-actions/auth@v1"
         with:
@@ -67,6 +74,9 @@ jobs:
           export_default_credentials: true
       - name: "Configure kubectl"
         run: gcloud container clusters get-credentials hypermine-gke --region=asia-south1
+      - name: Replace tags
+        run: find .deploy/deployment.yaml -type f -exec sed  -i -e "s#__LATEST_RELEASE_TAG__#${{ env.LATEST_RELEASE_TAG }}#" {} \;
+
       - name: "Replace secrets"
         run: find .deploy/deployment.yaml -type f -exec sed  -i ''s/__GOOGLE_ARTIFACT_URL__/${{ secrets.GOOGLE_ARTIFACT_URL }}/g'' {} \;
       - name: "Replace secrets"
