--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -2,10 +2,11 @@ name: AuthServer Build and deploy Pipeline
 
 on:
   push:
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]+"
-      - "v[0-9]+.[0-9]+.[0-9]-rc.[0-9]+"
-
+    # tags:
+    #   - "v[0-9]+.[0-9]+.[0-9]+"
+    #   - "v[0-9]+.[0-9]+.[0-9]-rc.[0-9]+"
+    branches:
+      - "devops"
 jobs:
   Build-Pipeline:
     runs-on: ubuntu-latest
